--- a/interactive_draft/interactive_draft.html
+++ b/interactive_draft/interactive_draft.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <link href="style.css" rel="stylesheet" />
-    <script src="js/d3.v7.js"></script>
+    <!-- <script src="js/d3.v7.js"></script> -->
     <style>
         /* style for tooltip as well as the base map container, taken from example, to update*/
         .tooltip {
@@ -32,16 +32,16 @@
     </div>
 
     <!-- d3 and topojson -->
-    <!-- <script src="https://d3js.org/d3.v7.min.js"></script> -->
+    <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="https://unpkg.com/topojson@3"></script>
 
     <script>
-        d3.csv("http://localhost:8000/data/income_clean.csv", function(data) {
-            header('Access-Control-Allow-Origin: https://localhost:8000');
-            for (var i = 0; i < data.length; i++) {
-                console.log(data[i].state);
-            }
-        });
+        // d3.csv("http://localhost:8000/data/income_clean.csv", function(data) {
+        //     header('Access-Control-Allow-Origin: https://localhost:8000');
+        //     for (var i = 0; i < data.length; i++) {
+        //         console.log(data[i].state);
+        //     }
+        // });
 
         const width = 975;
         const height = 610;
@@ -60,16 +60,17 @@
             const path = d3.geoPath().projection(projection);
 
             d3.json(
-            "https://github.com/topojson/us-atlas/states-albers-10m.json",
+            "https://github.com/topojson/us-atlas#states-10m.json",
         ).then((data) => {
             // using topojson 3rd party library to convert to GeoJSON which D3 understands
             const geojson = mesh(data, data.objects.states, (a, b) => a !== b);
+
+            // const geojson = topojson.feature(data, data.objects.countries);
 
             svg.append("g")
                 .selectAll("path")
                 .data(topojson.feature(data, data.objects.counties).features)
                 .join("path")
-                .attr("fill", d => color(valuemap.get(d.id)))
                 .attr("d", path)
 
         });
